# advent-of-code

./: .gitignore  Cargo.toml  LICENCE  README.md
2022/00/: Cargo.toml
aoc/: Cargo.toml
aoc/src/: day_eight.rs  day_eleven.rs  day_fifteen.rs  day_five.rs  day_four.rs  day_fourteen.rs  day_nine.rs  day_one.rs  day_seven.rs  day_six.rs  day_sixteen.rs  day_ten.rs  day_thirteen.rs  day_three.rs  day_twelve.rs  day_two.rs  main.rs
error_macro/: Cargo.toml
error_macro/src/: lib.rs
error_macro_test/: Cargo.toml
error_macro_test/src/: main.rs
src/: day_four.rs  day_one.rs  day_three.rs  day_two.rs  main.rs
