[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
default-run = "advent-of-code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", features = ["derive"]}
error_macro = {path = "../error_macro"}