[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
default-run = "advent-of-code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error_macro = {path = "../error_macro"}
regex = "1.7.0"
itertools = "0.10.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }